# blueprint-zephyr

./: .gitignore  README.md  demo_script.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: firmware-creation.yml
lwm2m_client/: CMakeLists.txt  README.md  overlay-leshan-bootstrap.conf  prj.conf
lwm2m_client/boards/: nrf9160dk_nrf9160_ns.conf
lwm2m_client/src/: main.c
nce_coap_demo/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
nce_coap_demo/src/: main.c
nce_fota_mender_demo/: CMakeLists.txt  prj.conf  sample.yaml
nce_fota_mender_demo/src/lib/custom_download_client/src/: coap.c  http.c  sanity.c
nce_fota_mender_demo/src/lib/custom_fota_download/: CMakeLists.txt
nce_fota_mender_demo/src/lib/custom_fota_download/include/: custom_fota_download.h
nce_fota_mender_demo/src/lib/custom_fota_download/src/: fota_download_util.c
nce_fota_mender_demo/src/ota/: led_control.c
nce_fota_mender_demo/src/ota/include/: update.h
nce_fota_mender_demo/thingy_binaries/: app_signed.hex  v2.mender
nce_lwm2m_demo/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
nce_lwm2m_demo/boards/: nrf9160dk_nrf9160_ns.conf  thingy91_nrf9160_ns.conf
nce_lwm2m_demo/src/: main.c
nce_lwm2m_demo/src/events/: CMakeLists.txt
nce_lwm2m_demo/src/lwm2m/: CMakeLists.txt  Kconfig  lwm2m_app_utils.c  lwm2m_buzzer.c  lwm2m_device.c  lwm2m_light_control.c  lwm2m_push_button.c
nce_lwm2m_demo/src/lwm2m/include/: lwm2m_client_app.h
nce_lwm2m_demo/src/ui/: CMakeLists.txt  Kconfig
nce_udp_demo/: Kconfig  README.md  prj.conf  sample.yaml
nce_udp_demo/src/: main.c
(+37 files in other folders)
